@@ -1,3 +1,7 @@
+2006-03-29  Herbert Xu <herbert@gondor.apana.org.au>
+
+	* Removed useless parsebackquote flag.
+
 2006-01-12  Herbert Xu <herbert@gondor.apana.org.au>
 
 	* Fixed eval exit status with empty arguments.
